chore(html): add meta description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="mYZshk3WyxKBfUCgal7yuE_7LTnphJykPABI-3lOI24" />
+    <meta name="description" content="Create cheatsheets with Markdown. An application for creating and exporting cheatsheets as PDF documents using Markdown syntax." />
     <title>Cheatsheet Maker</title>
   </head>
   <body>
