--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <meta name="description" content="Cheatsheet Maker - Create beautiful, customizable cheatsheets with Markdown. Export to PDF with support for math expressions, diagrams, code blocks, and more. Free online tool." />
+    <meta name="keywords" content="cheatsheet, markdown, pdf, generator, math expressions, diagrams, code blocks, export, online tool, katex, mermaid" />
+  
+    
     <meta name="google-site-verification" content="mYZshk3WyxKBfUCgal7yuE_7LTnphJykPABI-3lOI24" />
-    <meta name="description" content="Create cheatsheets with Markdown. An application for creating and exporting cheatsheets as PDF documents using Markdown syntax." />
-    <title>Cheatsheet Maker</title>
+    <title>Cheatsheet Maker - Create Beautiful Markdown Cheatsheets Online</title>
   </head>
   <body>
     <div id="root"></div>
